[package]
name = "pab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.6.0"
image = { version = "0.24.8", default-features = false, features = ["jpeg"] }
rand = "0.8.5"
reqwest = { version = "0.11.24" }
tokio = { version = "1.36.0", features = ["macros", "rt"] } 
